# qt-notepad

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: finddialog.cpp.7FB872E31AACE84F.idx  finddialog.h.EA1DEFCF5481FE90.idx  finddialog.hpp.6761A290DBEDF48E.idx  main.cpp.F47BC79A3E6CA9E1.idx  mainwindow.cpp.564AE338366CB21D.idx  mainwindow.h.E62733C8B83ED72F.idx  mainwindow.hpp.AF7FFF0F3F32DCD8.idx  replacedialog.cpp.AEA25A85269E4EBD.idx  replacedialog.h.5D36222610D33274.idx  replacedialog.hpp.76BF66ADEB61076A.idx
design/: replacedialog.ui
include/: finddialog.hpp  mainwindow.hpp  replacedialog.hpp
src/: CMakeLists.txt  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacedialog.cpp  replacedialog.h
src/.kdev4/: src.kdev4
src/cpp-files/: finddialog.cpp  main.cpp  mainwindow.cpp  replacedialog.cpp
src/design/: finddialog.ui  mainwindow.ui  replacedialog.ui  resources.qrc
src/header-files/: finddialog.h  mainwindow.h  replacedialog.h
